[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/boundries.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/bricks.tscn" type="PackedScene" id=5]

[node name="main" type="Node2D"]

transform/pos = Vector2( 1.56494, -2.00001 )
script/script = ExtResource( 1 )

[node name="game_end_status" type="Control" parent="."]

visibility/visible = false
anchor/left = 3
anchor/top = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 44.0
margin/top = 30.0
margin/right = 1008.0
margin/bottom = 602.0

[node name="restart_button" type="Button" parent="game_end_status"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 490.0
margin/top = 328.0
margin/right = 547.0
margin/bottom = 348.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Restart"
flat = false

[node name="final_status" type="Label" parent="game_end_status"]

anchor/left = 3
anchor/top = 3
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 499.0
margin/top = 300.0
margin/right = 499.0
margin/bottom = 300.0
text = "game_status_end"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="paddle" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( -0.5, 0.25 )

[node name="ball" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 0, -24 )

[node name="boundries" parent="." instance=ExtResource( 4 )]

[node name="bricks" parent="." instance=ExtResource( 5 )]

[node name="score" type="Label" parent="."]

anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = -445.0
margin/bottom = -237.0
text = "score"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="game_end_status/restart_button" to="." method="_on_restart_button_pressed"]


